Changes for 2.2.17rc1

New features:

Bug fixes:
.......PS. [ZBX-9889,ZBX-11674] fixed vmware.eventlog item values to have unique timestamps in history table (dimir)
........S. [ZBX-11635] fixed possible deadlocks when removing obsolete VMWare services (Sergejs)
.......PS. [ZBX-11481] fixed resolving macros for ip and dns fields in interfaces that are linked to main interface with {HOST.IP} and {HOST.DNS} macros (Sergejs)
..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
..F....... [ZBX-11354] fixed applications being reset in templated items and item prototypes when modifying its parent (Ivo)
...G...... [ZBX-11494] fixed "system.stat" returning not supported after Zabbix agent restart on AIX (viktors)
...G...... [ZBX-11479] fixed threaded metric to handle interruption by a signal (vso)
........S. [ZBX-11534] fixed default operation step duration to be included in minimal step calculation instead of overriding (vso)
...G...... [ZBX-11528] fixed zabbix_get to match zabbix_server protocol (vso)

--------------------------------------------------------------------------------
Changes for 2.2.16

New features:
A.F....... [ZBX-1357] updated English (United States), Spanish, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 2.2.16rc1

New features:
........S. [ZBXNEXT-1859] improved performance by not inserting events of auto registration if no such action was enabled, insert/update/select in a bulk on auto registration data from proxy (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)

Bug fixes:
........S. [ZBX-11509] fixed system.run command parameter to be quoted only if it contains special characters (vso)
.......PS. [ZBX-4661] fixed possible crash when Oracle database is not available (vso)
..F....... [ZBX-11521] fixed JS error in media popup (Oleg)